--- a/HY.MiPlate.Services/HY.MiPlate.Services.Host/Web.config
+++ b/HY.MiPlate.Services/HY.MiPlate.Services.Host/Web.config
@@ -26,6 +26,11 @@
         <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>    
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <services>
+            <service name="HY.MiPlate.Services.Service.SampleService">
+              <endpoint  binding="basicHttpsBinding" contract="HY.MiPlate.Services.Service.ISampleService"/>
+      </service>
+    </services>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
